--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
         <item>Description two</item>
         <item>Description three</item>
         <item>Description four</item>
+        <item>Description five</item>
     </string-array>
 
     <string-array name="Departments">
@@ -35,45 +36,46 @@
     </string-array>
 
     <string-array name="Auto_Event">
-        <item>Auto_1</item>
-        <item>Auto_2</item>
-        <item>Auto_3</item>
-        <item>Auto_4</item>
+        <item>Lathe War</item>
+        <item>Vehicle Troubleshooting</item>
+        <item>Mock Placement</item>
+        <item>Model Making</item>
     </string-array>
 
     <string-array name="Civil_Event">
-        <item>Civil_1</item>
-        <item>Civil_2</item>
-        <item>Civil_3</item>
-        <item>Civil_4</item>
+        <item>Spaco Frame</item>
+        <item>Poster Presentation</item>
+        <item>Clad Clash</item>
+        <item>Treasure Hunt</item>
     </string-array>
 
     <string-array name="Comp_Event">
-        <item>Comp_1</item>
-        <item>Comp_2</item>
-        <item>Comp_3</item>
-        <item>Comp_4</item>
+        <item>C60</item>
+        <item>Algorix</item>
+        <item>Search Master</item>
+        <item>Data Geeks</item>
+        <item>Counter Strike</item>
     </string-array>
 
     <string-array name="Entc_Event">
-        <item>Entc_1</item>
-        <item>Entc_2</item>
-        <item>Entc_3</item>
-        <item>Entc_4</item>
+        <item>Spechien Sie Matlab</item>
+        <item>Electro-Spark</item>
+        <item>Utrix</item>
+        <item>Robox</item>
     </string-array>
 
     <string-array name="Instru_Event">
-        <item>Instru_1</item>
-        <item>Instru_2</item>
-        <item>Instru_3</item>
-        <item>Instru_4</item>
+        <item>Robosoccer</item>
+        <item>PLC Master</item>
+        <item>Quiz</item>
+        <item>Block Warrior</item>
     </string-array>
 
     <string-array name="Mech_Event">
-        <item>Mech_1</item>
-        <item>Mech_2</item>
-        <item>Mech_3</item>
-        <item>Mech_4</item>s
+        <item>RC Nitro Racing</item>
+        <item>Consilio</item>
+        <item>The Catapult</item>
+        <item>Linkage and Gear</item>s
     </string-array>
 
 
