Realtime table completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
         <item>Shrutika Karande</item>
         <item>harshal ingle</item>
         <item>Laraib Mushtaq</item>
+        <item>Pratik Patil</item>
         <item>Sofia Shaikh</item>
 
         <item>AJABE CHAITANYA</item>
@@ -124,7 +125,7 @@
         <item>spkarande98@gmail.com</item>
         <item>harshalingle517@gmail.com</item>
         <item>lmushtaq10@gmail.com</item>
-        <item></item>
+        <item>pratikp204@gmail.com</item>
         <item>Sofia23sy@gmail.com</item>
 
         <item>cak00798@gmail.com</item>
@@ -134,8 +135,8 @@
 
         <item>rohitshirsat29@gmail.com</item>
         <item>yadavpratik702@gmail.com</item>
-        <item>av.kamble27@gmail.com</item>
         <item>poojagaikwad5757@gmail.com </item>
+        <item>av.kamble27@gmail.com</item>
 
         <item>samukamble0610@gmail.com</item>
         <item>dadasahebkasal123@gmail.com</item>
