--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,7 +145,7 @@
     </string-array>
 
 
-    <string-array name="Name">
+    <string-array name="Developer_Name">
         <item>Arvind</item>
         <item>Dheeraj</item>
         <item>Laraib</item>
