Rule BOok Change.. Forgot and reset password...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
         <item>KANDLE AKSHAY</item>
         <item>RAJTILAK RAUT</item>
         <item>KALE AKSHADA</item>
-        <item>POOJA CHAVAN</item>
+        <item>Divya Waghmare</item>
 
         <item>Shrutika Karande</item>
         <item>harshal ingle</item>
@@ -107,8 +107,9 @@
 
         <item>Samruddhi Kamble</item>
         <item>Dadasaheb Kasal</item>
-        <item>Sumit Gaikwad</item>
+        <item>Sachin Tiwar</item>
         <item>Rohit Chavan</item>
+        <item>Arvind Badwar</item>
     </string-array>
 
     <string-array name="email">
@@ -120,7 +121,7 @@
         <item>kandleakshay751@gmail.com</item>
         <item>rajtilakraut@gmail.com</item>
         <item>kaleakashada@gmail.com</item>
-        <item>pooja28chavan@gmail.com</item>
+        <item>diyawagh765@gmail.com</item>
 
         <item>spkarande98@gmail.com</item>
         <item>harshalingle517@gmail.com</item>
@@ -140,8 +141,9 @@
 
         <item>samukamble0610@gmail.com</item>
         <item>dadasahebkasal123@gmail.com</item>
-        <item>sumitgaikwad218@gmail.com</item>
+        <item>tiwarisachins98@gmail.com</item>
         <item>rohitchavanrc7@gmail.com</item>
+        <item>arvind.badwar19@gmail.com</item>
     </string-array>
 
 
